testsuite/tests/typecheck/should_fail/T18406.stderr

T18406.hs:8:7: error: [GHC-39999]
    • No instance for ‘C Bool b0’ arising from a use of ‘op’
    • In the expression: op True x
      In an equation for ‘f’: f x = op True x
